# gslocal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml
src/gslocal/: build.py  cli.py  config.py  docker.py  log.py  results.py  submission.py
src/gslocal/commands/: clean.py  init.py  run.py
src/gslocal/data/: default_submission_metadata.json
src/gslocal/ui/: log.py  spinner.py
